[gd_scene load_steps=3 format=3 uid="uid://vjgkn2ic8tks"]

[ext_resource type="Texture2D" uid="uid://c3o1jlhdurb1" path="res://icon.svg" id="1_ofrk3"]
[ext_resource type="Script" path="res://Button.gd" id="2_6fxly"]

[node name="Button" type="Button"]
texture_filter = 1
offset_left = 32.0
offset_top = 16.0
offset_right = 168.0
offset_bottom = 152.0
scale = Vector2(0.25, 0.25)
action_mode = 0
keep_pressed_outside = true
icon = ExtResource("1_ofrk3")
flat = true
script = ExtResource("2_6fxly")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
